# elon-tweet-scraper

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
elon_tweet_scraper/: __main__.py
typings/twikit/: __init__.pyi  bookmark.pyi  community.pyi  constants.pyi  errors.pyi  geo.pyi  group.pyi  list.pyi  media.pyi  message.pyi  notification.pyi  streaming.pyi  trend.pyi  tweet.pyi  user.pyi  utils.pyi
typings/twikit/_captcha/: __init__.pyi  base.pyi  capsolver.pyi
typings/twikit/client/: client.pyi  gql.pyi  v11.pyi
typings/twikit/guest/: __init__.pyi  client.pyi  tweet.pyi  user.pyi
typings/twikit/ui_metrics/: __init__.pyi  dom.pyi
typings/twikit/x_client_transaction/: __init__.pyi  cubic_curve.pyi  interpolate.pyi  rotation.pyi  transaction.pyi  utils.pyi
typings/twscrape/: __init__.pyi  account.pyi  accounts_pool.pyi  api.pyi  cli.pyi  db.pyi  imap.pyi  logger.pyi  login.pyi  models.pyi  queue_client.pyi  utils.pyi
