[project]
name = "elon-tweet-scraper"
version = "0.1.0"
description = ""
authors = [
    {name = "Hju Kneyck Flores",email = "hjucode@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "twikit (>=2.3.3,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "click (>=8.1.8,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.9"

